# consensus-debate

./: README.md  consensus_kickoff_results.md  consensus_kickoff_results_ollama_llama3.2_latest.md  requirements.txt
consensus_crew/: README.md  clean_markdown.py  crewai_flow.html  outputParsed1.md  outputParsed2.md  pyproject.toml
consensus_crew/src/: general_config.yaml
consensus_crew/src/config/: crew_config1.yaml  crew_config2.yaml  crew_config3.yaml  crew_config4.yaml
consensus_crew/src/consensus_crew/: crew_config2.yaml  crew_config3.yaml  crew_config4.yaml  crews.py  main.py
consensus_crew/src/consensus_crew/config/: agents.yaml  tasks.yaml
consensus_crew/src/data_models/: shared.py
consensus_flow/: README.md  pyproject.toml
consensus_flow/src/consensus_flow/: main.py
