[project]
name = "consensus_crew"
version = "0.1.0"
description = "consensus_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
consensus_crew = "consensus_crew.main:run"
run_crew = "consensus_crew.main:run"
train = "consensus_crew.main:train"
replay = "consensus_crew.main:replay"
test = "consensus_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
