[project]
name = "consensus"
version = "0.1.0"
description = "Consensus using crewAI"
authors = [{ name = "Antonio Lobo", email = "alobosantos10@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai>=0.95.0,<1.0.0"
]

[project.scripts]
kickoff = "consensus_crew.main:kickoff"
plot = "consensus_crew.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/consensus_crew"]
