[project]
name = "consensus_flow"
version = "0.1.0"
description = "consensus_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0",
]

[project.scripts]
kickoff = "consensus_flow.main:kickoff"
plot = "consensus_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
